# sns-quicknode

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build_container.sh  get_deployment.sh  get_deployment_status.sh  push_and_deploy_aws.sh  push_aws.sh  validate_provisoning.sh
ansible/files/: .gitignore  docker-compose.yaml
src/: _test_utils.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  matrix.rs  provisioning.rs  sns.rs
src/sns/: get_all_domains_for_owner.rs  get_domain_data.rs  get_domain_data_v2.rs  get_domain_key.rs  get_domain_record_key.rs  get_domain_record_v2_key.rs  get_domain_reverse_key.rs  get_favourite_domain.rs  get_registration_transaction.rs  get_subdomains.rs  get_supported_records.rs  resolve_domain.rs  reverse_lookup.rs
src/sql/: deactivate_endpoint.sql  deprovision.sql  get_provision.sql  insert_provision.sql  schema.sql  update_provision.sql
