[package]
name = "sns-quicknode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
const_format = "0.2.30"
deadpool-postgres = { version = "0.10.5" }
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio-postgres = "0.7.8"
base64 = "0.21.2"
sns-sdk = {git = "ssh://git@github.com/Bonfida/sns-sdk.git", branch="extra-rust-methods"}
solana-client = "1.14.18"
solana-sdk = "1.14.18"
env_logger = "0.10.0"
serde_json = "*"
chrono = "0.4.26"
bincode = "1.3.3"
