[package]
name = "sns-quicknode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
const_format = "0.2.30"
deadpool-postgres = { version = "0.12.1" }
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio-postgres = "0.7.8"
base64 = "0.21.2"
sns-sdk = { git = "https://github.com/Bonfida/sns-sdk.git" }
solana-client = "1.16.0"
solana-sdk = "1.16.0"
env_logger = "0.10.0"
serde_json = "*"
chrono = "0.4.26"
bincode = "1.3.3"
spl-name-service = { version = "0.3.0", features = ["no-entrypoint"] }
postgres-openssl = "0.5.0"
openssl = "0.10.54"
minimal-matrix = { git = "ssh://git@github.com/Bonfida/minimal-matrix.git" }
tokio = "1.14.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
sns-records = { git = "https://github.com/Bonfida/sns-records.git", version = "0.1.0", features = [
    "no-entrypoint",
] }
base16 = "0.2.1"


[dev-dependencies]
reqwest = "0.11.18"
